RESOLVED FIXED47554
An inline element with an absolutely positioned child does not correctly calculate/render padding and margin
https://bugs.webkit.org/show_bug.cgi?id=47554
Summary An inline element with an absolutely positioned child does not correctly calc...
Chadwick Dahlquist
Reported 2010-10-12 13:42:08 PDT
Created attachment 70560 [details] HTML page that recreates the issue Given one or more inline elements with padding or margin ("spans") flowing inside a fixed container, adding an absolutely positioned child to the span causes the spans to overflow beyond the bounds of the container. Removing the absolutely positioned child (or setting 'display: none') results in normal flow. It appears as if the presence of the absolutely positioned child causes the margin/padding dimensions to not be summed, as the overflow is proportional to the cumulative margin and padding. The attached file renders correctly (or as expected) in Mozilla.
Attachments
HTML page that recreates the issue (1.81 KB, text/html)
2010-10-12 13:42 PDT, Chadwick Dahlquist
no flags
Patch (5.33 KB, patch)
2013-04-14 04:42 PDT, Robert Hogan
no flags
Robert Hogan
Comment 1 2013-04-14 04:42:03 PDT
Dave Hyatt
Comment 2 2013-04-15 10:48:15 PDT
Comment on attachment 197983 [details] Patch r=me
WebKit Commit Bot
Comment 3 2013-04-15 11:22:19 PDT
Comment on attachment 197983 [details] Patch Clearing flags on attachment: 197983 Committed r148453: <http://trac.webkit.org/changeset/148453>
WebKit Commit Bot
Comment 4 2013-04-15 11:22:20 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.